--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+# Enable spring data repos 
+spring.data.jpa.repositories.enabled=true
+
+# Replace with your connection string
+spring.datasource.url=jdbc:mysql://localhost:3306/users
+
+# Replace with your credentials
+spring.datasource.username=root
+spring.datasource.password=test
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
